# MemoryManager

./: .gitignore  .travis.yml  CMakeLists.txt  MemMan.sln  MemMan.vcxproj  MemMan.vcxproj.filters  README.md  main.cpp
demo/: demo.c  tree.c  tree.h
memman/: memman.c  memman.h  memman_internal.h
tests/: test_alloc_dealloc.cpp  test_callback.cpp  test_ci.cpp  test_compare.cpp  test_deref.cpp  test_main.cpp  test_simple.cpp  test_typeidname.cpp  test_verify_empty.cpp  test_verify_ptr.cpp
